--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
  <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
  <!-- google font -->
  <link rel="preconnect" href="https://fonts.googleapis.com">
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -52,49 +52,76 @@
     @apply border border-4 border-black bg-black text-[56px] px-20 py-10 shadow-2xl transition hover:shadow-xl hover:bg-white hover:text-black rounded-[40px] text-white font-bold hover:!scale-105
    }
   }
+  @media (max-width: 767px) {
+    /* Styles for smaller screens */
+    #menu.hidden {
+      display: none;
+    }
+    #menu.flex-col {
+      flex-direction: column;
+    }
+  }
+  body {
+    zoom: 70%; /* Adjust the zoom level as needed */
+    transform-origin: top center; /* Set the origin for the zoom */
+  }
 </style>
 </head>
 
 
 <body>
- <header class="bg-[#282828]  shadow-2xl fixed w-full z-20 px-4" data-aos="fade-down">
-  <nav class="flex lg:flex-row flex-col justify-between items-center container mx-auto p-4">
-   <div>
-    <svg width="100" height="100%" viewBox="0 0 68 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-     <g filter="url(#filter0_d_1_5)">
-      <path
-       d="M4.4 15V0.999999H8.36V11.86H15.04V15H4.4ZM23.4522 15.28C22.3322 15.28 21.2989 15.1 20.3522 14.74C19.4055 14.38 18.5789 13.8733 17.8722 13.22C17.1789 12.5533 16.6389 11.78 16.2522 10.9C15.8655 10.02 15.6722 9.05333 15.6722 8C15.6722 6.94667 15.8655 5.98 16.2522 5.1C16.6389 4.22 17.1789 3.45333 17.8722 2.8C18.5789 2.13333 19.4055 1.62 20.3522 1.26C21.2989 0.899999 22.3322 0.719999 23.4522 0.719999C24.5855 0.719999 25.6189 0.899999 26.5522 1.26C27.4989 1.62 28.3189 2.13333 29.0122 2.8C29.7055 3.45333 30.2455 4.22 30.6322 5.1C31.0322 5.98 31.2322 6.94667 31.2322 8C31.2322 9.05333 31.0322 10.0267 30.6322 10.92C30.2455 11.8 29.7055 12.5667 29.0122 13.22C28.3189 13.8733 27.4989 14.38 26.5522 14.74C25.6189 15.1 24.5855 15.28 23.4522 15.28ZM23.4522 12C23.9855 12 24.4789 11.9067 24.9322 11.72C25.3989 11.5333 25.7989 11.2667 26.1322 10.92C26.4789 10.56 26.7455 10.1333 26.9322 9.64C27.1322 9.14667 27.2322 8.6 27.2322 8C27.2322 7.38667 27.1322 6.84 26.9322 6.36C26.7455 5.86667 26.4789 5.44667 26.1322 5.1C25.7989 4.74 25.3989 4.46667 24.9322 4.28C24.4789 4.09333 23.9855 4 23.4522 4C22.9189 4 22.4189 4.09333 21.9522 4.28C21.4989 4.46667 21.0989 4.74 20.7522 5.1C20.4189 5.44667 20.1522 5.86667 19.9522 6.36C19.7655 6.84 19.6722 7.38667 19.6722 8C19.6722 8.6 19.7655 9.14667 19.9522 9.64C20.1522 10.1333 20.4189 10.56 20.7522 10.92C21.0989 11.2667 21.4989 11.5333 21.9522 11.72C22.4189 11.9067 22.9189 12 23.4522 12Z"
-       fill="#B41D1D" />
-      <path
-       d="M40.3063 15.28C39.1996 15.28 38.1729 15.1067 37.2263 14.76C36.2796 14.4 35.4596 13.8933 34.7663 13.24C34.0863 12.5867 33.5529 11.82 33.1663 10.94C32.7796 10.0467 32.5863 9.06667 32.5863 8C32.5863 6.93333 32.7796 5.96 33.1663 5.08C33.5529 4.18667 34.0929 3.41333 34.7863 2.76C35.4796 2.10667 36.2996 1.60667 37.2463 1.26C38.2063 0.899999 39.2529 0.719999 40.3863 0.719999C41.7063 0.719999 42.8863 0.939999 43.9263 1.38C44.9663 1.82 45.8263 2.45333 46.5063 3.28L43.9863 5.56C43.5063 5.04 42.9863 4.65333 42.4263 4.4C41.8796 4.13333 41.2663 4 40.5863 4C39.9863 4 39.4396 4.09333 38.9463 4.28C38.4529 4.46667 38.0329 4.74 37.6863 5.1C37.3396 5.44667 37.0663 5.86667 36.8663 6.36C36.6796 6.84 36.5863 7.38667 36.5863 8C36.5863 8.58667 36.6796 9.12667 36.8663 9.62C37.0663 10.1133 37.3396 10.54 37.6863 10.9C38.0329 11.2467 38.4463 11.52 38.9263 11.72C39.4196 11.9067 39.9596 12 40.5463 12C41.1329 12 41.7063 11.9067 42.2663 11.72C42.8263 11.52 43.3929 11.1867 43.9663 10.72L46.1863 13.5C45.3863 14.0733 44.4596 14.5133 43.4063 14.82C42.3529 15.1267 41.3196 15.28 40.3063 15.28ZM42.6863 12.98V7.7H46.1863V13.5L42.6863 12.98ZM55.7569 15.28C54.6369 15.28 53.6035 15.1 52.6569 14.74C51.7102 14.38 50.8835 13.8733 50.1769 13.22C49.4835 12.5533 48.9435 11.78 48.5569 10.9C48.1702 10.02 47.9769 9.05333 47.9769 8C47.9769 6.94667 48.1702 5.98 48.5569 5.1C48.9435 4.22 49.4835 3.45333 50.1769 2.8C50.8835 2.13333 51.7102 1.62 52.6569 1.26C53.6035 0.899999 54.6369 0.719999 55.7569 0.719999C56.8902 0.719999 57.9235 0.899999 58.8569 1.26C59.8035 1.62 60.6235 2.13333 61.3169 2.8C62.0102 3.45333 62.5502 4.22 62.9369 5.1C63.3369 5.98 63.5369 6.94667 63.5369 8C63.5369 9.05333 63.3369 10.0267 62.9369 10.92C62.5502 11.8 62.0102 12.5667 61.3169 13.22C60.6235 13.8733 59.8035 14.38 58.8569 14.74C57.9235 15.1 56.8902 15.28 55.7569 15.28ZM55.7569 12C56.2902 12 56.7835 11.9067 57.2369 11.72C57.7035 11.5333 58.1035 11.2667 58.4369 10.92C58.7835 10.56 59.0502 10.1333 59.2369 9.64C59.4369 9.14667 59.5369 8.6 59.5369 8C59.5369 7.38667 59.4369 6.84 59.2369 6.36C59.0502 5.86667 58.7835 5.44667 58.4369 5.1C58.1035 4.74 57.7035 4.46667 57.2369 4.28C56.7835 4.09333 56.2902 4 55.7569 4C55.2235 4 54.7235 4.09333 54.2569 4.28C53.8035 4.46667 53.4035 4.74 53.0569 5.1C52.7235 5.44667 52.4569 5.86667 52.2569 6.36C52.0702 6.84 51.9769 7.38667 51.9769 8C51.9769 8.6 52.0702 9.14667 52.2569 9.64C52.4569 10.1333 52.7235 10.56 53.0569 10.92C53.4035 11.2667 53.8035 11.5333 54.2569 11.72C54.7235 11.9067 55.2235 12 55.7569 12Z"
-       fill="#201DB4" />
-     </g>
-     <defs>
-      <filter id="filter0_d_1_5" x="0.399994" y="0.719971" width="67.1369" height="22.5601" filterUnits="userSpaceOnUse"
-       color-interpolation-filters="sRGB">
-       <feFlood flood-opacity="0" result="BackgroundImageFix" />
-       <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
-        result="hardAlpha" />
-       <feOffset dy="4" />
-       <feGaussianBlur stdDeviation="2" />
-       <feComposite in2="hardAlpha" operator="out" />
-       <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0" />
-       <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_1_5" />
-       <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_1_5" result="shape" />
-      </filter>
-     </defs>
-    </svg>
-   </div>
-   <ul class="flex items-center gap-20 font-bold">
-    <li><a href="" class="nav-item">HOME</a></li>
-    <li><a href="" class="nav-item">ABOUT US</a></li>
-    <li><a href="" class="nav-item">CONTACT US</a></li>
-    <li><button style="text-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);"
-      class="bg-[#B41D1D] text-white px-8 py-4 rounded-2xl font-bold text-2xl transition hover:bg-red-500 hover:text-[#B41D1D]border border-[#B41D1D]">PLAY</button>
-    </li>
-   </ul>
-  </nav>
- </header>
+  <header class="bg-[#282828] shadow-2xl fixed w-full z-20 px-4" data-aos="fade-down">
+    <nav class="flex flex-col lg:flex-row justify-between items-center container mx-auto p-4">
+      <div>
+        <svg width="100" height="100%" viewBox="0 0 68 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <g filter="url(#filter0_d_1_5)">
+           <path
+            d="M4.4 15V0.999999H8.36V11.86H15.04V15H4.4ZM23.4522 15.28C22.3322 15.28 21.2989 15.1 20.3522 14.74C19.4055 14.38 18.5789 13.8733 17.8722 13.22C17.1789 12.5533 16.6389 11.78 16.2522 10.9C15.8655 10.02 15.6722 9.05333 15.6722 8C15.6722 6.94667 15.8655 5.98 16.2522 5.1C16.6389 4.22 17.1789 3.45333 17.8722 2.8C18.5789 2.13333 19.4055 1.62 20.3522 1.26C21.2989 0.899999 22.3322 0.719999 23.4522 0.719999C24.5855 0.719999 25.6189 0.899999 26.5522 1.26C27.4989 1.62 28.3189 2.13333 29.0122 2.8C29.7055 3.45333 30.2455 4.22 30.6322 5.1C31.0322 5.98 31.2322 6.94667 31.2322 8C31.2322 9.05333 31.0322 10.0267 30.6322 10.92C30.2455 11.8 29.7055 12.5667 29.0122 13.22C28.3189 13.8733 27.4989 14.38 26.5522 14.74C25.6189 15.1 24.5855 15.28 23.4522 15.28ZM23.4522 12C23.9855 12 24.4789 11.9067 24.9322 11.72C25.3989 11.5333 25.7989 11.2667 26.1322 10.92C26.4789 10.56 26.7455 10.1333 26.9322 9.64C27.1322 9.14667 27.2322 8.6 27.2322 8C27.2322 7.38667 27.1322 6.84 26.9322 6.36C26.7455 5.86667 26.4789 5.44667 26.1322 5.1C25.7989 4.74 25.3989 4.46667 24.9322 4.28C24.4789 4.09333 23.9855 4 23.4522 4C22.9189 4 22.4189 4.09333 21.9522 4.28C21.4989 4.46667 21.0989 4.74 20.7522 5.1C20.4189 5.44667 20.1522 5.86667 19.9522 6.36C19.7655 6.84 19.6722 7.38667 19.6722 8C19.6722 8.6 19.7655 9.14667 19.9522 9.64C20.1522 10.1333 20.4189 10.56 20.7522 10.92C21.0989 11.2667 21.4989 11.5333 21.9522 11.72C22.4189 11.9067 22.9189 12 23.4522 12Z"
+            fill="#B41D1D" />
+           <path
+            d="M40.3063 15.28C39.1996 15.28 38.1729 15.1067 37.2263 14.76C36.2796 14.4 35.4596 13.8933 34.7663 13.24C34.0863 12.5867 33.5529 11.82 33.1663 10.94C32.7796 10.0467 32.5863 9.06667 32.5863 8C32.5863 6.93333 32.7796 5.96 33.1663 5.08C33.5529 4.18667 34.0929 3.41333 34.7863 2.76C35.4796 2.10667 36.2996 1.60667 37.2463 1.26C38.2063 0.899999 39.2529 0.719999 40.3863 0.719999C41.7063 0.719999 42.8863 0.939999 43.9263 1.38C44.9663 1.82 45.8263 2.45333 46.5063 3.28L43.9863 5.56C43.5063 5.04 42.9863 4.65333 42.4263 4.4C41.8796 4.13333 41.2663 4 40.5863 4C39.9863 4 39.4396 4.09333 38.9463 4.28C38.4529 4.46667 38.0329 4.74 37.6863 5.1C37.3396 5.44667 37.0663 5.86667 36.8663 6.36C36.6796 6.84 36.5863 7.38667 36.5863 8C36.5863 8.58667 36.6796 9.12667 36.8663 9.62C37.0663 10.1133 37.3396 10.54 37.6863 10.9C38.0329 11.2467 38.4463 11.52 38.9263 11.72C39.4196 11.9067 39.9596 12 40.5463 12C41.1329 12 41.7063 11.9067 42.2663 11.72C42.8263 11.52 43.3929 11.1867 43.9663 10.72L46.1863 13.5C45.3863 14.0733 44.4596 14.5133 43.4063 14.82C42.3529 15.1267 41.3196 15.28 40.3063 15.28ZM42.6863 12.98V7.7H46.1863V13.5L42.6863 12.98ZM55.7569 15.28C54.6369 15.28 53.6035 15.1 52.6569 14.74C51.7102 14.38 50.8835 13.8733 50.1769 13.22C49.4835 12.5533 48.9435 11.78 48.5569 10.9C48.1702 10.02 47.9769 9.05333 47.9769 8C47.9769 6.94667 48.1702 5.98 48.5569 5.1C48.9435 4.22 49.4835 3.45333 50.1769 2.8C50.8835 2.13333 51.7102 1.62 52.6569 1.26C53.6035 0.899999 54.6369 0.719999 55.7569 0.719999C56.8902 0.719999 57.9235 0.899999 58.8569 1.26C59.8035 1.62 60.6235 2.13333 61.3169 2.8C62.0102 3.45333 62.5502 4.22 62.9369 5.1C63.3369 5.98 63.5369 6.94667 63.5369 8C63.5369 9.05333 63.3369 10.0267 62.9369 10.92C62.5502 11.8 62.0102 12.5667 61.3169 13.22C60.6235 13.8733 59.8035 14.38 58.8569 14.74C57.9235 15.1 56.8902 15.28 55.7569 15.28ZM55.7569 12C56.2902 12 56.7835 11.9067 57.2369 11.72C57.7035 11.5333 58.1035 11.2667 58.4369 10.92C58.7835 10.56 59.0502 10.1333 59.2369 9.64C59.4369 9.14667 59.5369 8.6 59.5369 8C59.5369 7.38667 59.4369 6.84 59.2369 6.36C59.0502 5.86667 58.7835 5.44667 58.4369 5.1C58.1035 4.74 57.7035 4.46667 57.2369 4.28C56.7835 4.09333 56.2902 4 55.7569 4C55.2235 4 54.7235 4.09333 54.2569 4.28C53.8035 4.46667 53.4035 4.74 53.0569 5.1C52.7235 5.44667 52.4569 5.86667 52.2569 6.36C52.0702 6.84 51.9769 7.38667 51.9769 8C51.9769 8.6 52.0702 9.14667 52.2569 9.64C52.4569 10.1333 52.7235 10.56 53.0569 10.92C53.4035 11.2667 53.8035 11.5333 54.2569 11.72C54.7235 11.9067 55.2235 12 55.7569 12Z"
+            fill="#201DB4" />
+          </g>
+          <defs>
+           <filter id="filter0_d_1_5" x="0.399994" y="0.719971" width="67.1369" height="22.5601" filterUnits="userSpaceOnUse"
+            color-interpolation-filters="sRGB">
+            <feFlood flood-opacity="0" result="BackgroundImageFix" />
+            <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+             result="hardAlpha" />
+            <feOffset dy="4" />
+            <feGaussianBlur stdDeviation="2" />
+            <feComposite in2="hardAlpha" operator="out" />
+            <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0" />
+            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_1_5" />
+            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_1_5" result="shape" />
+           </filter>
+          </defs>
+         </svg>
+      </div>
+      <div class="flex items-center">
+        <!-- Hamburger icon -->
+        <button id="hamburger-button" class="lg:hidden inline-flex items-center justify-center p-2 rounded-md text-gray-400 hover:text-white hover:bg-gray-700 focus:outline-none focus:bg-gray-700 focus:text-white" aria-expanded="false" aria-haspopup="true" onclick="toggleMenu()">
+          <span class="sr-only">Open main menu</span>
+          <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+          </svg>
+        </button>
+  
+        <ul id="menu" class="hidden lg:flex items-center flex-col lg:flex-row gap-8 font-bold ml-0 lg:ml-12">
+          <li style="padding: 10px;"><a href="" class="nav-item">HOME</a></li>
+          <li style="padding: 10px;"><a href="" class="nav-item">ABOUT US</a></li>
+          <li style="padding: 10px;"><a href="" class="nav-item">CONTACT US</a></li>
+          <li style="padding: 10px;">
+            <button style="text-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);" class="bg-[#B41D1D] text-white px-8 py-4 rounded-2xl font-bold text-2xl transition hover:bg-red-500 hover:text-[#B41D1D] border border-[#B41D1D]">
+              PLAY
+            </button>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  
+  
  <main>
   <!-- game -->
   <section class="bg-[#282828] min-h-[400px] rounded-b-[100px] px-4">
@@ -139,14 +166,14 @@
   </section>
   <!-- answer -->
   <section class="mx-auto container grid gap-20 lg:grid-cols-2 grid-cols-1 mt-20 px-4">
-   <button data-aos="zoom-in" class="btn-answer">ANSWER 1</button>
-   <button data-aos="zoom-in" class="btn-answer">ANSWER 2</button>
-   <button data-aos="zoom-in" class="btn-answer">ANSWER 3</button>
-   <button data-aos="zoom-in" class="btn-answer">ANSWER 4</button>
+   <button  class="btn-answer">ANSWER 1</button>
+   <button  class="btn-answer">ANSWER 2</button>
+   <button  class="btn-answer">ANSWER 3</button>
+   <button  class="btn-answer">ANSWER 4</button>
   </section>
+  <br>
   <!-- retired -->
-  <section class="bg-[#282828] min-h-[400px] rounded-t-[100px] mt-20  flex justify-center items-center flex-col px-4"
-   data-aos="fade-up">
+  <section class="bg-[#282828] min-h-[400px] rounded-t-[100px] mt-20  flex justify-center items-center flex-col px-4">
    <div class="container mx-auto  flex justify-center items-center flex-col">
     <p class="text-white  text-3xl max-w-[650px] text-center mb-10">Lorem Ipsum is simply dummy text of the printing and
      typesetting industry. </p>
@@ -186,6 +213,22 @@
  </footer>
 </body>
 <!-- aos -->
+<script>
+  const hamburgerButton = document.getElementById('hamburger-button');
+  const menu = document.getElementById('menu');
+
+  hamburgerButton.addEventListener('click', () => {
+    menu.classList.toggle('hidden');
+  });
+
+  // Hide the menu when a menu item is clicked
+  const menuItems = menu.getElementsByTagName('a');
+  for (let i = 0; i < menuItems.length; i++) {
+    menuItems[i].addEventListener('click', () => {
+      menu.classList.add('hidden');
+    });
+  }
+</script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
  AOS.init();
