--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <h1 class="max-w-2xl mb-4 text-4xl font-extrabold leading-none tracking-tight md:text-5xl xl:text-6xl ">Building digital <br>products & brands.</h1>
                 <p class="max-w-2xl mb-6 font-light text-black lg:mb-8 md:text-lg lg:text-xl dark:text-gray-400">This free and open-source landing page template was built using the utility classes from <a href="https://tailwindcss.com" class="hover:underline">Tailwind CSS</a> and based on the components from the <a href="https://flowbite.com/docs/getting-started/introduction/" class="hover:underline">Flowbite Library</a> and the <a href="https://flowbite.com/blocks/" class="hover:underline">Blocks System</a>.</p>
                 <div class="space-y-4 sm:flex sm:space-y-0 sm:space-x-4">
-                    <a href="quiz.html" class="inline-flex items-center justify-center w-full px-5 py-3 text-2xl font-medium text-center text-gray-900 border border-gray-200 rounded-lg sm:w-auto hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 dark:text-white dark:border-gray-700 dark:hover:bg-gray-700 dark:focus:ring-gray-800"> Play
+                    <a href="quiz.html" class="inline-flex items-center justify-center w-full px-5 py-3 text-2xl font-medium text-center text-gray-900 border border-gray-200 rounded-lg sm:w-auto hover:bg-gray-100 focus:ring-4 focus:ring-gray-100 "> Play
                     </a> 
                 </div>
             </div>
@@ -136,7 +136,7 @@
               <img src="img/screencapture-127-0-0-1-5500-quiz-html-2023-07-26-11_44_28.png" alt="">
               
               <a href="quiz.html">
-              <button class="text-[46px] font-bold text-white bg-[#FF250D] shadow-2xl transition hover:bg-[#E44C10] hover:text-white px-10 py-4 rounded-2xl" id="retired-button" style="text-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);">PLAY</button>
+              <button class="text-[46px] font-bold text-white bg-[#FF250D] shadow-2xl transition hover:bg-[#E44C10] hover:text-black px-10 py-4 rounded-2xl" id="retired-button" style="text-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);">PLAY</button>
             </a>
             </div>
           </section>
