--- a/quiz.html
+++ b/quiz.html
@@ -10,6 +10,7 @@
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
   rel="stylesheet">
+  <link rel="icon" href="img/police-car_1048342 1.svg" type="image/svg+xml">
  <!-- aos  -->
  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
  <!-- style -->
@@ -265,8 +266,8 @@
   },
   {
     question: "Provinsi di Indonesia yang terkenal dengan produksi kopi, termasuk kopi 'Kopi Luwak' adalah?",
-    choices: ["Aceh", "Jawa Barat", "Jawa Timur", "Sumatra Utara"],
-    correctAnswer: 3, // Index of the correct choice (0-based)
+    choices: ["Aceh", "Jawa Barat", "Jawa Timur", "Sumatra Barat"],
+    correctAnswer: 2, // Index of the correct choice (0-based)
   },
   {
     question: "Berapakah hasil dari 5 + 7?",
