--- a/quiz.html
+++ b/quiz.html
@@ -67,7 +67,11 @@
     zoom: 70%; /* Adjust the zoom level as needed */
     transform-origin: top center; /* Set the origin for the zoom */
   }
+  audio { display:none;}
 </style>
+<audio controls autoplay loop>
+  <source src="src/audio/SB Music- Grass Skirt Chase.mp3" type="audio/mpeg">
+</audio>
 </head>
 
 
