--- a/failure.html
+++ b/failure.html
@@ -114,7 +114,11 @@
     animation: spin_01 3s linear infinite;
 }
 
+audio { display:none;}
   </style>
+  <audio controls autoplay>
+  <source src="src/audio/Mario lose sound effect (HD).mp3" type="audio/mpeg">
+</audio>
   </head>
   
   
@@ -123,7 +127,7 @@
     <header class="bg-[#ffffff] shadow-2xl fixed w-full z-20 px-4" data-aos="fade-down">
       <nav class="flex flex-col lg:flex-row justify-between items-center container mx-auto p-4">
         <div>
-          <a href="#hero">
+          <a href="index.html">
           <svg width="100" height="100%" viewBox="0 0 512 512" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <rect width="512" height="512" fill="url(#pattern0)"/>
             <defs>
@@ -180,7 +184,7 @@
                 <div class="relative">
                     <div class="bg-white p-24 rounded-lg shadow-lg max-w-7xl">
                         <div class="text-center">
-                            <p class="text-4xl font-semibold">Kamu Payah! Pencuri Berhasil Kabur!</p>
+                            <p class="text-4xl font-semibold text-[#E44C10]">Kamu Payah! Pencuri Berhasil Kabur!</p>
                             <br>
                             <a href="quiz.html">
                                 <button style="text-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);" class="bg-[#3333CB] text-white px-8 py-4 rounded-2xl font-bold text-2xl transition hover:bg-[#00DDB5] hover:text-white">
