--- a/successful.html
+++ b/successful.html
@@ -113,8 +113,11 @@
     color: #E44C10;
     animation: spin_01 3s linear infinite;
 }
-
+audio { display:none;}
   </style>
+  <audio controls autoplay>
+  <source src="src/audio/Stage Win (Super Mario) - Sound Effect HD.mp3" type="audio/mpeg">
+</audio>
   </head>
   
   
@@ -123,7 +126,7 @@
     <header class="bg-[#ffffff] shadow-2xl fixed w-full z-20 px-4" data-aos="fade-down">
       <nav class="flex flex-col lg:flex-row justify-between items-center container mx-auto p-4">
         <div>
-          <a href="#hero">
+          <a href="index.html">
           <svg width="100" height="100%" viewBox="0 0 512 512" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <rect width="512" height="512" fill="url(#pattern0)"/>
             <defs>
