--- a/failure.html
+++ b/failure.html
@@ -11,7 +11,7 @@
     rel="stylesheet">
     <!-- aos  -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="icon" href="img/police-car_1048342 1.svg" type="image/svg+xml">
+    <link rel="icon" href="img/Logo project 1.png" type="image/svg+xml">
     <!-- style -->
  <style>
     * {
