--- a/quiz.html
+++ b/quiz.html
@@ -10,7 +10,7 @@
  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
   rel="stylesheet">
-  <link rel="icon" href="img/police-car_1048342 1.svg" type="image/svg+xml">
+  <link rel="icon" href="img/Logo project 1.png" type="image/svg+xml">
  <!-- aos  -->
  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
  <!-- style -->
@@ -251,7 +251,7 @@
   },
   {
     question: "Siapakah Presiden Indonesia pertama?",
-    choices: ["Sukarno", "Suharto", "Joko Widodo", "Megawati Sukarnoputri"],
+    choices: ["Ir.Soekarno", "Soeharto", "Joko Widodo", "Megawati Soekarnoputri"],
     correctAnswer: 0, // Index of the correct choice (0-based)
   },
   {
@@ -286,7 +286,7 @@
   },
   {
     question: "Pahlawan nasional Indonesia yang terkenal dalam perjuangan melawan penjajah adalah?",
-    choices: ["Sukarno", "Gatot Soebroto", "R.A. Kartini", "Tjut Njak Dhien"],
+    choices: ["Ir.Soekarno", "Gatot Soebroto", "R.A. Kartini", "Tjut Njak Dhien"],
     correctAnswer: 1, // Index of the correct choice (0-based)
   },
   {
@@ -308,6 +308,51 @@
     question: "Negara terluas di dunia berdasarkan luas wilayah adalah?",
     choices: ["Rusia", "Kanada", "Amerika Serikat", "China"],
     correctAnswer: 0, // Index of the correct choice (0-based)
+  },
+  {
+    question: "Apa hasil dari 8 + 5?",
+    choices: ["10", "13", "15", "18"],
+    correctAnswer: 1
+  },
+  {
+    question: "Siapa penulis drama 'Romeo dan Juliet'?",
+    choices: ["Charles Dickens", "William Shakespeare", "Jane Austen", "Mark Twain"],
+    correctAnswer: 1
+  },
+  {
+    question: "Jika semua kucing berwarna hitam, dan kucing Fluffy adalah kucing, maka Fluffy berwarna apa?",
+    choices: ["Hitam", "Putih", "Abu-abu", "Tidak bisa ditentukan"],
+    correctAnswer: 0
+  },
+  {
+    question: "Apa akar kuadrat dari 64?",
+    choices: ["4", "6", "8", "10"],
+    correctAnswer: 2
+  },
+  {
+    question: "Jika angka-angka 3, 7, 9, dan 12 dijumlahkan, berapa hasilnya?",
+    choices: ["18", "27", "31", "32"],
+    correctAnswer: 2
+  },
+  {
+    question: "Negara manakah yang terkenal dengan Menara Eiffel?",
+    choices: ["Spanyol", "Italia", "Prancis", "Jerman"],
+    correctAnswer: 2
+  },
+  {
+    question: "Jika semua burung adalah hewan, dan beberapa hewan memiliki bulu berwarna biru, apakah semua burung memiliki bulu berwarna biru?",
+    choices: ["Ya", "Tidak", "Tidak bisa ditentukan", "Bergantung pada jenis burung"],
+    correctAnswer: 1
+  },
+  {
+    question: "Berapa banyak kaki yang dimiliki seekor kucing?",
+    choices: ["2", "4", "6", "8"],
+    correctAnswer: 1
+  },
+  {
+    question: "Manakah di antara berikut yang merupakan planet terbesar di Tata Surya?",
+    choices: ["Mars", "Jupiter", "Venus", "Saturnus"],
+    correctAnswer: 1
   },
 ];
 
